[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "addok-france"
version = "1.1.3"
description = "Addok plugin for France-specific address geocoding."
readme = "README.md"
authors = [
    {name = "Yohan Boniface", email = "yohan.boniface@data.gouv.fr"}
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["addok", "geocoding", "france", "plugin"]
requires-python = ">=3.9"
dependencies = [
    "addok",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.1",
    "build~=1.2",
    "twine~=6.1",
]

[project.urls]
Homepage = "https://github.com/etalab/addok-france"

[project.entry-points."addok.ext"]
france = "addok_france"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "venv*", ".venv*", "build*", "dist*"]

[tool.pytest.ini_options]
addopts = "-x"
